tests/neg/semantic_panic_bad_arity.baa
// EXPECT: عدد معاملات 'توقف_فوري' غير صحيح

صحيح الرئيسية() {
    توقف_فوري().
    إرجع ٠.
}
